# time-tracker-ai-mcp

./: .cursorrules  .gitignore  .mcp.json  README.md  acp.json  glama.json  llms.txt  package.json  persistence.py  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
time_tracker_ai_mcp/: server.py
