[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "time-tracker-ai-mcp"
version = "0.1.0"
description = "Track work hours, calculate durations, and summarize time entries by project or date."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
time_tracker_ai_mcp = "time_tracker_ai_mcp.server:main"
